# VPM

./: .gitignore  Cargo.toml  README.md  output.txt  output2.txt  output3.txt
src/: curriculum.rs  lib.rs  main.rs  network.rs  oscillator.rs
web/: app.js  index.html  style.css
