[package]
name = "rusty_brain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["console"] }

